--- a/src/components/Layout/Header/Header.css
+++ b/src/components/Layout/Header/Header.css
@@ -25,8 +25,9 @@
 }
 
 .header-logo {
-    height: 180px;
-    width: 160px;
+    height: 200px;
+    width: auto;
+    object-fit: contain;
 }
 
 .header-nav {
