--- a/src/components/Layout/Header/Header.css
+++ b/src/components/Layout/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
     background-color: black;
-    position: relative;
+    position: fixed;
     top: 0;
     z-index: 100;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
